# openrowingmonitor-ESP32S3-ZephyrOS

./: .gitignore  Dockerfile  README.md  run.sh
docs/: index.html  index.js
docs/components/: AppDialog.js  (+6 more)
workspace/open_rowing_monitor_esp32/: .gdbinit  CMakeLists.txt  README.md  app.overlay  logs.txt  prj.conf  prj_debug.conf
workspace/open_rowing_monitor_esp32/boards/: esp32s3.overlay  esp32s3_devkitc_esp32s3_procpu.conf  esp32s3_devkitc_esp32s3_procpu.overlay
workspace/open_rowing_monitor_esp32/module/RowingSettings/: Kconfig  RowingSettings.h
workspace/open_rowing_monitor_esp32/modules/: code.txt
workspace/open_rowing_monitor_esp32/modules/ble_service/: ftms_code.txt
workspace/open_rowing_monitor_esp32/modules/ble_service/BleManager/: BleManager.cpp  BleManager.h  CMakeLists.txt
workspace/open_rowing_monitor_esp32/modules/ble_service/FTMS/: CMakeLists.txt  FTMS.cpp  FTMS.h
workspace/open_rowing_monitor_esp32/modules/ble_service/FTMSService/: CMakeLists.txt  FTMSService.cpp  FTMSService.h
workspace/open_rowing_monitor_esp32/modules/ble_service/RowerBridge/: CMakeLists.txt  RowerBridge.cpp  RowerBridge.h
workspace/open_rowing_monitor_esp32/modules/fit_sdk/: CMakeLists.txt
workspace/open_rowing_monitor_esp32/modules/fit_sdk/zephyr/: module.yaml
workspace/open_rowing_monitor_esp32/src/: main.cpp  version.h
workspace/open_rowing_monitor_esp32/src/engine/: MovingFlankDetector.cpp  MovingFlankDetector.h  RowingData.h  RowingEngine.cpp  RowingEngine.h
workspace/open_rowing_monitor_esp32/src/gpio/: GpioTimerService.cpp  GpioTimerService.h
(+54 files in other folders)
